--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+anyio==3.7.0
 apturl==0.5.2
 asgiref==3.6.0
+asyncio==3.4.3
 beautifulsoup4==4.12.2
 bleach==6.0.0
 blinker==1.4
@@ -19,9 +21,13 @@ distro==1.7.0
 distro-info===1.1build1
 Django==4.1.5
 docutils==0.20.1
+exceptiongroup==1.1.1
 fake-useragent==1.1.3
 filelock==3.6.0
+h11==0.14.0
+httpcore==0.17.2
 httplib2==0.20.2
+httpx==0.24.1
 idna==3.3
 importlib-metadata==4.6.4
 jeepney==0.7.1
@@ -65,12 +71,13 @@ pyxdg==0.27
 PyYAML==5.4.1
 readme-renderer==40.0
 reportlab==3.6.8
-requests~=2.31.0
+requests==2.25.1
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==13.4.2
 SecretStorage==3.3.1
 six==1.16.0
+sniffio==1.3.0
 social-blade-scraper==0.0.3
 soupsieve==2.4.1
 sqlparse==0.4.3
@@ -92,7 +99,3 @@ webencodings==0.5.1
 xdg==5
 xkit==0.0.0
 zipp==1.0.0
-
-bs4~=0.0.1
-httpx~=0.24.1
-setuptools~=67.8.0
